--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --ext .js src",
-    "start": "nodemon src/index.js",
+    "start": "nodemon --ignore 'data/*' --ignore thunder-tests/* src/index.js",
     "test": "node node_modules/jest/bin/jest.js"
   },
   "dependencies": {
