--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint --ext .js src",
     "start": "nodemon --ignore 'data/*' --ignore thunder-tests/* src/index.js",
     "test": "node node_modules/jest/bin/jest.js",
-    "drop-db": "node src/drop-db.js"
+    "drop-db": "node src/dropDb.js"
   },
   "dependencies": {
     "express": "^4.18.2",
